objects/vlocity_cmt__CpqMemberType__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <description>Controls the order of member type tabs</description>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this record is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberObjectName__c</fullName>
        <description>SObject this member type points to</description>
        <label>Member Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderFieldName__c</fullName>
        <description>Corresponding field name on Order object</description>
        <label>Order Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderItemFieldName__c</fullName>
        <description>Corresponding field name on OrderItem object</description>
        <label>Order Product Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderMemberFieldName__c</fullName>
        <description>Corresponding field name on OrderMember object</description>
        <label>Order Member Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteFieldName__c</fullName>
        <description>Corresponding field name on Quote object</description>
        <label>Quote Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemFieldName__c</fullName>
        <description>Corresponding field name on QuoteLineItem object</description>
        <label>Quote Product Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteMemberFieldName__c</fullName>
        <description>Corresponding field name on QuoteMember object</description>
        <label>Quote Member Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecordFilters__c</fullName>
        <description>This is for additional condition for filtering records for grouping.</description>
        <label>Record Filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecordType__c</fullName>
        <description>Indicates the record type of Member Object Name</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CPQ Group Member Type</label>
    <pluralLabel>CPQ Group Member Types</pluralLabel>
</CustomObject>